--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       DEFAULT_ADMIN_EMAIL: admin@vormadal.com
       DEFAULT_ADMIN_PASSWORD: example
       JWT_SECRET: should-be-very-secret
+      INIT_DATA: true
     ports:
       - 8000:8000
       - 9229:9229
