--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
       DEFAULT_ADMIN_PASSWORD: example
       JWT_SECRET: should-be-very-secret
       INIT_DATA: true
+      DEBUG_MODE: true
     ports:
       - 8000:8000
       - 9229:9229
